@@ -1,4 +1,8 @@
 v2.1.1 (work in progress)
+      * Add mcpl_create_outfile_mpi and mcpl_merge_outfiles_mpi utility
+        functions, to handle some of the tedium needed for applications creating
+        multiple MCPL files from a number of MPI processes before finally
+        merging to a single file.
       * ...
 
 v2.1.0 2024-05-17
